--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <title>Typing Test JS</title>
   </head>
   <body>
+    <div class="container">
+      <div class="stats">
+        <p>Time: <span id="timer">0s</span></p>
+        <p>Mistakes: <span id="mistakes">0</span></p>
+      </div>
+      <div id="quote" onmousedown="return false" onselectstart="return false">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
+        doloremque aperiam mollitia nisi. Possimus ea error magnam mollitia nemo
+        rem perspiciatis fugit. Quia cupiditate rem recusandae, quo laboriosam
+        dolorem perspiciatis.
+      </div>
+      <textarea
+        rows="3"
+        id="quote-input"
+        placeholder="Type here when the test starts..."
+      ></textarea>
+      <button id="start-test">Start Test</button>
+      <button id="stop-test">Stop Test</button>
+      <div class="result">
+        <h3>Result</h3>
+        <div class="wrapper">
+          <p>Accuracy: <span id="accuracy"></span></p>
+          <p>Speed: <span id="wpm"></span></p>
+        </div>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
