add: renderNewQuote function

--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
         <p>Time: <span id="timer">0s</span></p>
         <p>Mistakes: <span id="mistakes">0</span></p>
       </div>
-      <div id="quote" onmousedown="return false" onselectstart="return false">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-        doloremque aperiam mollitia nisi. Possimus ea error magnam mollitia nemo
-        rem perspiciatis fugit. Quia cupiditate rem recusandae, quo laboriosam
-        dolorem perspiciatis.
-      </div>
+      <div
+        id="quote"
+        onmousedown="return false"
+        onselectstart="return false"
+      ></div>
       <textarea
         rows="3"
         id="quote-input"
