--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         id="quote-input"
         placeholder="Type here when the test starts..."
       ></textarea>
-      <button id="start-test">Start Test</button>
+      <button id="start-test" onclick="startTest()">Start Test</button>
       <button id="stop-test">Stop Test</button>
       <div class="result">
         <h3>Result</h3>
