--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         placeholder="Type here when the test starts..."
       ></textarea>
       <button id="start-test" onclick="startTest()">Start Test</button>
-      <button id="stop-test">Stop Test</button>
+      <button id="stop-test" onclick="displayResult()">Stop Test</button>
       <div class="result">
         <h3>Result</h3>
         <div class="wrapper">
